# ptz_camera_goto_point

./: CMakeLists.txt  FindGlog.cmake  GTest.cmake  README.md  camera_intrinsics.h  curl_error_category.cpp  curl_error_category.h  dahua_error_category.cpp  dahua_error_category.h  dahua_ptz_camera.cpp  dahua_ptz_camera.h  http_interface.cpp  http_interface.h  main.cpp  position_calculator.cpp  position_calculator.h
tests/: position_calculator_test.cpp
